src/wgpu_binding.zig

pub extern fn wgpuRenderBundleEncoderSetIndexBuffer(renderBundleEncoder: WGPURenderBundleEncoder, buffer: WGPUBuffer, format: WGPUIndexFormat, offset: u64, size: u64) void;
pub extern fn wgpuRenderBundleEncoderSetPipeline(renderBundleEncoder: WGPURenderBundleEncoder, pipeline: WGPURenderPipeline) void;
pub extern fn wgpuRenderBundleEncoderSetVertexBuffer(renderBundleEncoder: WGPURenderBundleEncoder, slot: u32, buffer: WGPUBuffer, offset: u64, size: u64) void;
pub extern fn wgpuRenderPassEncoderBeginOcclusionQuery(renderPassEncoder: WGPURenderPassEncoder, queryIndex: u32) void;
pub extern fn wgpuRenderPassEncoderBeginPipelineStatisticsQuery(renderPassEncoder: WGPURenderPassEncoder, querySet: WGPUQuerySet, queryIndex: u32) void;
pub extern fn wgpuRenderPassEncoderDraw(renderPassEncoder: WGPURenderPassEncoder, vertexCount: u32, instanceCount: u32, firstVertex: u32, firstInstance: u32) void;
pub extern fn wgpuRenderPassEncoderDrawIndexed(renderPassEncoder: WGPURenderPassEncoder, indexCount: u32, instanceCount: u32, firstIndex: u32, baseVertex: i32, firstInstance: u32) void;
pub extern fn wgpuRenderPassEncoderDrawIndexedIndirect(renderPassEncoder: WGPURenderPassEncoder, indirectBuffer: WGPUBuffer, indirectOffset: u64) void;
pub extern fn wgpuRenderPassEncoderDrawIndirect(renderPassEncoder: WGPURenderPassEncoder, indirectBuffer: WGPUBuffer, indirectOffset: u64) void;
pub extern fn wgpuRenderPassEncoderEndOcclusionQuery(renderPassEncoder: WGPURenderPassEncoder) void;
pub extern fn wgpuRenderPassEncoderEndPass(renderPassEncoder: WGPURenderPassEncoder) void;
pub extern fn wgpuRenderPassEncoderEndPipelineStatisticsQuery(renderPassEncoder: WGPURenderPassEncoder) void;
pub extern fn wgpuRenderPassEncoderExecuteBundles(renderPassEncoder: WGPURenderPassEncoder, bundlesCount: u32, bundles: [*c]const WGPURenderBundle) void;
pub extern fn wgpuRenderPassEncoderInsertDebugMarker(renderPassEncoder: WGPURenderPassEncoder, markerLabel: [*c]const u8) void;
pub extern fn wgpuRenderPassEncoderPopDebugGroup(renderPassEncoder: WGPURenderPassEncoder) void;
pub extern fn wgpuRenderPassEncoderPushDebugGroup(renderPassEncoder: WGPURenderPassEncoder, groupLabel: [*c]const u8) void;
pub extern fn wgpuRenderPassEncoderSetBindGroup(renderPassEncoder: WGPURenderPassEncoder, groupIndex: u32, group: WGPUBindGroup, dynamicOffsetCount: u32, dynamicOffsets: [*c]const u32) void;
pub extern fn wgpuRenderPassEncoderSetBlendConstant(renderPassEncoder: WGPURenderPassEncoder, color: [*c]const WGPUColor) void;
pub extern fn wgpuRenderPassEncoderSetIndexBuffer(renderPassEncoder: WGPURenderPassEncoder, buffer: WGPUBuffer, format: WGPUIndexFormat, offset: u64, size: u64) void;
pub extern fn wgpuRenderPassEncoderSetPipeline(renderPassEncoder: WGPURenderPassEncoder, pipeline: WGPURenderPipeline) void;
pub extern fn wgpuRenderPassEncoderSetScissorRect(renderPassEncoder: WGPURenderPassEncoder, x: u32, y: u32, width: u32, height: u32) void;
pub extern fn wgpuRenderPassEncoderSetStencilReference(renderPassEncoder: WGPURenderPassEncoder, reference: u32) void;
pub extern fn wgpuRenderPassEncoderSetVertexBuffer(renderPassEncoder: WGPURenderPassEncoder, slot: u32, buffer: WGPUBuffer, offset: u64, size: u64) void;
pub extern fn wgpuRenderPassEncoderSetViewport(renderPassEncoder: WGPURenderPassEncoder, x: f32, y: f32, width: f32, height: f32, minDepth: f32, maxDepth: f32) void;
pub extern fn wgpuRenderPassEncoderWriteTimestamp(renderPassEncoder: WGPURenderPassEncoder, querySet: WGPUQuerySet, queryIndex: u32) void;
pub extern fn wgpuRenderPipelineGetBindGroupLayout(renderPipeline: WGPURenderPipeline, groupIndex: u32) WGPUBindGroupLayout;
pub extern fn wgpuRenderPipelineSetLabel(renderPipeline: WGPURenderPipeline, label: [*c]const u8) void;
pub extern fn wgpuShaderModuleSetLabel(shaderModule: WGPUShaderModule, label: [*c]const u8) void;
pub extern fn wgpuSurfaceGetPreferredFormat(surface: WGPUSurface, adapter: WGPUAdapter) WGPUTextureFormat;
pub extern fn wgpuSwapChainGetCurrentTextureView(swapChain: WGPUSwapChain) WGPUTextureView;
pub extern fn wgpuSwapChainPresent(swapChain: WGPUSwapChain) void;
pub extern fn wgpuTextureCreateView(texture: WGPUTexture, descriptor: [*c]const WGPUTextureViewDescriptor) WGPUTextureView;
pub extern fn wgpuTextureDestroy(texture: WGPUTexture) void;
pub const WGPUSType_DeviceExtras: c_int = 1610612737;
pub const WGPUSType_AdapterExtras: c_int = 1610612738;
pub const WGPUNativeSType_Force32: c_int = 2147483647;
pub const enum_WGPUNativeSType = c_uint;
pub const WGPUNativeSType = enum_WGPUNativeSType;
pub const WGPUNativeFeature_TEXTURE_ADAPTER_SPECIFIC_FORMAT_FEATURES: c_int = 268435456;
pub const enum_WGPUNativeFeature = c_uint;
pub const WGPUNativeFeature = enum_WGPUNativeFeature;
pub const WGPULogLevel_Off: c_int = 0;
pub const WGPULogLevel_Error: c_int = 1;
pub const WGPULogLevel_Warn: c_int = 2;
pub const WGPULogLevel_Info: c_int = 3;
pub const WGPULogLevel_Debug: c_int = 4;
pub const WGPULogLevel_Trace: c_int = 5;
pub const WGPULogLevel_Force32: c_int = 2147483647;
pub const enum_WGPULogLevel = c_uint;
pub const WGPULogLevel = enum_WGPULogLevel;
pub const WGPUAdapterExtras = extern struct {
    chain: WGPUChainedStruct,
    backend: WGPUBackendType,
};
pub const WGPUDeviceExtras = extern struct {
    chain: WGPUChainedStruct,
    nativeFeatures: WGPUNativeFeature,
    label: [*:0]const u8,
    tracePath: ?[*:0]const u8,
};
pub const WGPULogCallback = ?fn (WGPULogLevel, [*c]const u8) callconv(.C) void;
pub extern fn wgpuDevicePoll(device: WGPUDevice, force_wait: bool) void;
pub extern fn wgpuSetLogCallback(callback: WGPULogCallback) void;
pub extern fn wgpuSetLogLevel(level: WGPULogLevel) void;
pub extern fn wgpuGetVersion() u32;
pub extern fn wgpuRenderPassEncoderSetPushConstants(encoder: WGPURenderPassEncoder, stages: WGPUShaderStage, offset: u32, sizeBytes: u32, data: ?*c_void) void;
pub extern fn wgpuBufferDrop(buffer: WGPUBuffer) void;
pub extern fn wgpuCommandEncoderDrop(commandEncoder: WGPUCommandEncoder) void;
pub extern fn wgpuDeviceDrop(device: WGPUDevice) void;
pub extern fn wgpuQuerySetDrop(querySet: WGPUQuerySet) void;
pub extern fn wgpuRenderPipelineDrop(renderPipeline: WGPURenderPipeline) void;
pub extern fn wgpuTextureDrop(texture: WGPUTexture) void;
pub extern fn wgpuTextureViewDrop(textureView: WGPUTextureView) void;
pub extern fn wgpuSamplerDrop(sampler: WGPUSampler) void;
pub extern fn wgpuBindGroupLayoutDrop(bindGroupLayout: WGPUBindGroupLayout) void;
pub extern fn wgpuPipelineLayoutDrop(pipelineLayout: WGPUPipelineLayout) void;
pub extern fn wgpuBindGroupDrop(bindGroup: WGPUBindGroup) void;
pub extern fn wgpuShaderModuleDrop(shaderModule: WGPUShaderModule) void;
pub extern fn wgpuCommandBufferDrop(commandBuffer: WGPUCommandBuffer) void;
pub extern fn wgpuRenderBundleDrop(renderBundle: WGPURenderBundle) void;
pub extern fn wgpuComputePipelineDrop(computePipeline: WGPUComputePipeline) void;
pub const WGPU_WHOLE_SIZE = @as(c_ulonglong, 0xffffffffffffffff);
pub const WGPU_COPY_STRIDE_UNDEFINED = @as(c_ulong, 0xffffffff);
pub const WGPU_LIMIT_U32_UNDEFINED = @as(c_ulong, 0xffffffff);
pub const WGPU_LIMIT_U64_UNDEFINED = @as(c_ulonglong, 0xffffffffffffffff);
pub const WGPU_ARRAY_LAYER_COUNT_UNDEFINED = @as(c_ulong, 0xffffffff);
pub const WGPU_MIP_LEVEL_COUNT_UNDEFINED = @as(c_ulong, 0xffffffff);
// pub const WGPUAdapterImpl = struct_WGPUAdapterImpl;
// pub const WGPUBindGroupImpl = struct_WGPUBindGroupImpl;
// pub const WGPUBindGroupLayoutImpl = struct_WGPUBindGroupLayoutImpl;
// pub const WGPUBufferImpl = struct_WGPUBufferImpl;
// pub const WGPUCommandBufferImpl = struct_WGPUCommandBufferImpl;
// pub const WGPUCommandEncoderImpl = struct_WGPUCommandEncoderImpl;
// pub const WGPUComputePassEncoderImpl = struct_WGPUComputePassEncoderImpl;
// pub const WGPUComputePipelineImpl = struct_WGPUComputePipelineImpl;
// pub const WGPUDeviceImpl = struct_WGPUDeviceImpl;
// pub const WGPUInstanceImpl = struct_WGPUInstanceImpl;
// pub const WGPUPipelineLayoutImpl = struct_WGPUPipelineLayoutImpl;
// pub const WGPUQuerySetImpl = struct_WGPUQuerySetImpl;
// pub const WGPUQueueImpl = struct_WGPUQueueImpl;
// pub const WGPURenderBundleImpl = struct_WGPURenderBundleImpl;
// pub const WGPURenderBundleEncoderImpl = struct_WGPURenderBundleEncoderImpl;
// pub const WGPURenderPassEncoderImpl = struct_WGPURenderPassEncoderImpl;
// pub const WGPURenderPipelineImpl = struct_WGPURenderPipelineImpl;
// pub const WGPUSamplerImpl = struct_WGPUSamplerImpl;
// pub const WGPUShaderModuleImpl = struct_WGPUShaderModuleImpl;
// pub const WGPUSurfaceImpl = struct_WGPUSurfaceImpl;
// pub const WGPUSwapChainImpl = struct_WGPUSwapChainImpl;
// pub const WGPUTextureImpl = struct_WGPUTextureImpl;
// pub const WGPUTextureViewImpl = struct_WGPUTextureViewImpl;
